# CodingDojo_Template

./: CMakeLists.txt
include/: hiker.h
src/: CMakeLists.txt  hiker.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: hiker_tests.cpp
